--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
         enable it to continue.
       </strong>
     </noscript>
+    <div id="theme-black-overlay"></div>
     <div id="app"></div>
     <!-- <script>var hostUrl = "assets/";</script> -->
     <script src="<%= BASE_URL %>_assets/plugins/global/plugins.bundle.js"></script>
